--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -11,7 +11,7 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
   background-color: #282c34;
@@ -35,4 +35,25 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.Gallery {
+  display: flex;
+  flex-direction: column;
+  /* animation: rollout 1s; */
+}
+
+.GalleryImage {
+  display: flex;
+  flex-direction: row;
+  animation: rollout 1s;
+}
+
+.GalleryImage > img {
+  width: 300px;
+}
+
+@keyframes rollout {
+  0% { transform: translateX(-300px); }
+  100% { transform: none; }
 }
