css layout change

--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -26,15 +26,27 @@
   }
 }
 
+nav {
+  /* overflow: hidden; */
+  background-color: #333;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
 .Gallery {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 }
 
+.GalleryImage > button {
+  width: 5em;
+}
+
 .GalleryImage {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   animation: fadeIn 4s;
 }
 
@@ -43,6 +55,10 @@
 }
 
 @keyframes fadeIn {
-  from {opacity: 0}
-  to {opacity: 1}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
