--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -1,57 +1,103 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
+  background-color: #282c34;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  /* min-height: 100vh; */
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
+/* .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+} */
 
 nav {
-  /* overflow: hidden; */
-  background-color: #333;
+  background-color: rgb(92, 92, 92);
   position: fixed;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
   top: 0;
   width: 100%;
+  height: 5vh;
+  z-index: 2;
+}
+
+nav > input {
+  width: 30%;
+  height: 50%;
+}
+
+nav > button {
+  width: 5%;  
+  height: 58%;
+  margin-left: 0.5%;
+  font-size: 1.2vw;
+  line-height: 58%;
+  /* display:   inline-flex;
+  align-items: center;  */
+}
+
+main {
+  margin-top: 5vh;
 }
 
 .Gallery {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  /* flex-wrap: wrap; */
 }
 
 .GalleryImage {
   display: flex;
-  flex-direction: column;
   animation: fadeIn 4s;
+  width: 500px;
+  position: relative;
+  z-index: 1;
+  margin-top: 10px;
+  border: solid grey 1px;
 }
 
 .GalleryImage > img {
-  width: 500px;
+  width: 100%;
 }
 
-.GalleryImage > button {
-  width: 5em;
+.voteBar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  position: absolute;
+  top: 1%;
+  right: 1%;
+  background-color: darkblue;
+  opacity: 0.8;
+  width: 100px;
+  color: white;
+  font-size: 10px;
+  border-radius: 5px;
+  height: 20px;
+  border: white solid 2px;
+}
+
+.voteBar > button {
+  width: 30%; 
+  height: 70%;
+  font-size: 10px;
+}
+
+.voteBar > p {
+  width: 60%;
+  font-size: 10px;
 }
 
 @keyframes fadeIn {
