--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -11,7 +11,7 @@
 .App-header {
   /* min-height: 100vh; */
   font-size: calc(10px + 2vmin);
-  color: white;
+
 }
 
 /* .App-link {
@@ -19,7 +19,8 @@
 } */
 
 nav {
-  background-color: rgb(92, 92, 92);
+  /* background-color: rgb(30, 30, 30); */
+  background-color: #282c34;
   position: fixed;
   display: flex;
   flex-direction: row;
@@ -29,11 +30,13 @@ nav {
   width: 100%;
   height: 5vh;
   z-index: 2;
+  border-bottom: solid white 1px;
 }
 
 nav > input {
   width: 30%;
   height: 50%;
+  margin-left: 10px;
 }
 
 nav > button {
@@ -51,20 +54,22 @@ main {
 }
 
 .Gallery {
+  /* margin-top: 35px; */
+  padding: 5px 0 0 5px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
 }
 
 .GalleryImage {
   display: flex;
   animation: fadeIn 4s;
-  width: 500px;
+  width: 450px;
   position: relative;
   z-index: 1;
-  margin-top: 10px;
-  border: solid grey 1px;
+  margin: 5px;
+  border: solid rgb(175, 175, 175) 1px;
 }
 
 .GalleryImage > img {
