--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -3,9 +3,12 @@
   padding: 0;
 }
 
+body {
+  background-color: #282c34;
+}
+
 .App {
   text-align: center;
-  background-color: #282c34;
 }
 
 .App-header {
@@ -58,14 +61,16 @@ main {
   padding: 5px 0 0 5px;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-end;
   flex-wrap: wrap;
+  width: 90%;
+  margin-left: 100px;
 }
 
 .GalleryImage {
   display: flex;
   animation: fadeIn 4s;
-  width: 450px;
+  width: 31%;
   position: relative;
   z-index: 1;
   margin: 5px;
