Changed outline/border on gallery images to remove occassional 1px gap

--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -74,11 +74,11 @@ main {
   position: relative;
   z-index: 1;
   margin: 5px;
-  border: solid rgb(175, 175, 175) 1px;
 }
 
 .GalleryImage > img {
   width: 100%;
+  outline: solid rgb(175, 175, 175) 1px;
 }
 
 .starBar {
