--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -32,7 +32,7 @@ nav {
   top: 0;
   width: 100%;
   height: 5vh;
-  z-index: 2;
+  z-index: 3;
   border-bottom: solid white 1px;
 }
 
@@ -71,12 +71,13 @@ main {
   animation: fadeIn 4s;
   /* width: 31%; */
   height: 300px;
+  width: auto;
   position: relative;
   z-index: 1;
   margin: 5px;
 }
 
-.GalleryImage > img {
+.photo {
   width: 100%;
   outline: solid rgb(175, 175, 175) 1px;
 }
@@ -122,6 +123,22 @@ main {
   font-size: 10px;
 }
 
+.zoomIn {
+  position: absolute;
+  visibility: hidden;
+  top: 45%;
+  right: 45%;
+  width: 50px;
+}
+
+.GalleryImage:hover .zoomIn {
+  visibility: visible;
+}
+
+.zoomIn:hover {
+  cursor: pointer;
+}
+
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -129,4 +146,31 @@ main {
   to {
     opacity: 1;
   }
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width:100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.modal-main {
+  position:fixed;
+  background: white;
+  width: 80%;
+  height: auto;
+  top:50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+}
+
+.display-block {
+  display: block;
+}
+
+.display-none {
+  display: none;
 }
