--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -155,16 +155,22 @@ main {
   width:100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
+  z-index: 5;
 }
 
 .modal-main {
+  z-index: 5;
   position:fixed;
-  background: white;
-  width: 80%;
-  height: auto;
+  width: 90vw;
+  height: 90vh;
   top:50%;
   left:50%;
   transform: translate(-50%,-50%);
+  overflow: scroll;
+}
+
+.modal-main > img {
+  min-width: 100%;
 }
 
 .display-block {
