Removed delay on visibility transition on hiding the modal

--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -184,5 +184,5 @@ main {
 .hide-modal {
   visibility: hidden;
   opacity: 0%;
-  transition: opacity 1s, visibility 1s 1s;
+  transition: opacity 1s, visibility 1s;
 }
