--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -184,5 +184,5 @@ main {
 .hide-modal {
   visibility: hidden;
   opacity: 0%;
-  transition: opacity 1s, visibility 1s;
+  transition: opacity 1s, visibility 0.7s; /* play with visiblity timer to reduce lag */
 }
