--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -168,6 +168,7 @@ main {
   transform: translate(-50%,-50%);
   overflow: scroll;
   overflow-x: auto;
+  overflow-y: auto;
   outline: solid rgb(175, 175, 175) 3px;
 }
 
