--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -203,9 +203,11 @@ main {
 .hamburger-menu {
   display: flex;
   flex-direction: column;
+  align-items: center;
   position: fixed;
   top: 5vh;
   width: 25vw;
+  background-color: #3d434f;
   transform: translateX(-100%);
   transition: transform 0.5s; 
 }
@@ -216,4 +218,12 @@ main {
 
 .hide-hamburger-menu {
   transform: translateX(-100%);
+}
+
+.hamburger-menu > * {
+  /* color: rgb(0, 0, 0); */
+  /* padding: 14px 16px; */
+  width: 50%;
+  text-decoration: none;
+  font-size: 17px;
 }
