--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -206,24 +206,31 @@ main {
   align-items: center;
   position: fixed;
   top: 5vh;
-  width: 25vw;
+  width: 300px;
   background-color: #3d434f;
   transform: translateX(-100%);
-  transition: transform 0.5s; 
+  opacity: 0;
 }
 
 .show-hamburger-menu {
   transform: translateX(0%);
+  opacity: 1;
+  transition: opacity 0.3s, transform 0.3s;
 }
 
 .hide-hamburger-menu {
   transform: translateX(-100%);
+  opacity: 0;
+  transition: opacity 0.3s ease-in, transform 0.3s;
 }
 
-.hamburger-menu > * {
+.hamburger-links > a {
   /* color: rgb(0, 0, 0); */
-  /* padding: 14px 16px; */
-  width: 50%;
+  margin: 5px 0;
+  width: 80%;
   text-decoration: none;
   font-size: 17px;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
 }
