--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -22,18 +22,26 @@ body {
 } */
 
 nav {
-  /* background-color: rgb(30, 30, 30); */
   background-color: #282c34;
+  color: white;
   position: fixed;
   display: flex;
   flex-direction: row;
-  justify-content: left;
+  justify-content: space-between;
   align-items: center;
   top: 0;
   width: 100%;
   height: 5vh;
   z-index: 3;
   border-bottom: solid white 1px;
+}
+
+nav > *:first-child {
+  margin-left: 10px;
+}
+
+nav > *:last-child {
+  margin-right: 10px;
 }
 
 main {
