--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -11,12 +11,6 @@ body {
   text-align: center;
 }
 
-.App-header {
-  /* min-height: 100vh; */
-  font-size: calc(10px + 2vmin);
-
-}
-
 /* .App-link {
   color: #61dafb;
 } */
@@ -32,8 +26,9 @@ nav {
   top: 0;
   width: 100%;
   height: 5vh;
-  z-index: 3;
+  z-index: 2;
   border-bottom: solid white 1px;
+  font-size: 14pt;
 }
 
 nav > *:first-child {
@@ -147,11 +142,11 @@ main {
   width:100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
-  z-index: 5;
+  z-index: 3;
 }
 
 .image-modal {
-  z-index: 5;
+  z-index: 4;
   position:fixed;
   width: 90vw;
   height: 90vh;
@@ -257,10 +252,10 @@ main {
 }
 
 .info-modal {
-  z-index: 5;
+  z-index: 4;
   position:fixed;
-  width: 90vw;
-  height: 90vh;
+  width: 30vw;
+  height: 70vh;
   top:50%;
   left:50%;
   transform: translate(-50%,-50%);
