--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -24,23 +24,21 @@ nav {
   justify-content: space-between;
   align-items: center;
   top: 0;
-  width: 100%;
-  height: 5vh;
+  width: calc(100% - 20px);
+  height: 40px;
   z-index: 2;
   border-bottom: solid white 1px;
   font-size: 14pt;
+  padding: 0 10px;
 }
 
-nav > *:first-child {
-  margin-left: 10px;
-}
-
-nav > *:last-child {
-  margin-right: 10px;
+.theme {
+  flex-grow: 2;
+  text-align: center;
 }
 
 main {
-  margin-top: 5vh;
+  margin-top: 40px;
 }
 
 .Gallery {
@@ -199,8 +197,16 @@ main {
 
 .hamburger-icon {
   height: 70%;
-  margin-left: 10px;
   cursor: pointer;
+}
+
+.hamburger-icon-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  width: 110px;
+  height: 100%;
 }
 
 .hamburger-menu {
@@ -208,8 +214,9 @@ main {
   flex-direction: column;
   align-items: center;
   position: fixed;
-  top: 5vh;
+  top: 40px;
   width: 300px;
+  left: 0px;
   background-color: #3d434f;
   transform: translateX(-100%);
   opacity: 0;
@@ -243,6 +250,7 @@ main {
   flex-direction: row;
   align-items: center;
   height: 100%;
+  width: 110px;
 }
 
 .info-icon {
