Added info to modal, styled transition, and added a button to open the hamburger menu

--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -209,11 +209,13 @@ main {
   align-items: center;
   position: fixed;
   top: 41px;
-  width: 300px;
   left: 0px;
+  width: 300px;
   background-color: #3d434f;
   transform: translateX(-100%);
   opacity: 0;
+  border-bottom: solid white 1px;
+  border-right: solid white 1px;
 }
 
 .show-hamburger-menu {
@@ -255,27 +257,74 @@ main {
 }
 
 .info-modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  position: fixed;
   z-index: 4;
-  position:fixed;
-  width: 30vw;
-  height: 70vh;
-  top:50%;
-  left:50%;
-  transform: translate(-50%,-50%);
+  top: 41px;
+  right: 0px;
+  width: 600px;
+  min-height: 60vh;
+  background-color: #3d434f;
+  color: white;
+  border-left: solid white 1px;
+  border-bottom: solid white 1px;
   overflow: scroll;
   overflow-x: auto;
   overflow-y: auto;
-  outline: solid rgb(175, 175, 175) 3px;
+  font-size: 14pt;
+  padding: 0 10px;
+  transform: translateX(100%);
+  opacity: 0;
 }
 
 .show-info-modal {
-  visibility: visible;
-  opacity: 100%;
-  transition: opacity 1s;
+  transform: translateX(0%);
+  opacity: 1;
+  transition: opacity 0.4s, transform 0.4s;
 }
 
 .hide-info-modal {
-  visibility: hidden;
-  opacity: 0%;
-  transition: opacity 1s, visibility 0.7s;
+  transform: translateX(100%);
+  opacity: 0;
+  transition: opacity 0.4s ease-in, transform 0.4s;
+}
+
+.info-modal-title {
+  text-decoration: underline;
+}
+
+.info-modal-open-menu-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.info-modal-open-menu-button{
+  margin-top: 20px;
+  width: 150px;
+  height: 40px;
+  border-radius: 5px;
+  font-size: 14pt;
+  cursor: pointer;  
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  background-color: white;
+}
+
+.info-modal-open-menu-button > span {
+  margin-left: 5px;
+}
+
+.info-modal-open-menu-button:hover {
+  background-color: #282c34;
+}
+
+.info-modal-open-menu-button:hover > span {
+  color: white;
 }
