--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -340,7 +340,7 @@ main {
 }
 
 .info-modal-open-menu-button:hover {
-  background-color: #282c34;
+  background-color: #7c9ee1;
 }
 
 .info-modal-open-menu-button:hover > span {
