--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -216,7 +216,7 @@ main {
 .hamburger-menu {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   position: fixed;
   top: 41px;
   left: 0px;
@@ -241,23 +241,64 @@ main {
 }
 
 .hamburger-menu-items {
-  width: 100%;
+  width: 90%;
+}
+
+.hamburger-menu-header {
+  width: calc(100% - 5px);
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 2px 0px 2px 10px;
+  font-size: 12pt;
 }
 
 .hamburger-menu-item-wrapper {
-  width: calc(100% - 5px);
+  width: 100%;
   cursor: pointer;
   height: 50px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  padding: 2px 0px 2px 5px;
+  padding: 2px 0;
   font-size: 12pt;
 }
 
 .hamburger-menu-item-wrapper:hover {
   background-color: #7c9ee1;
+}
+
+.hamburger-menu-item-wrapper:first-child {
+  border-top: solid white 1px;
+}
+
+.hamburger-menu-item-wrapper:last-child {
+  border-top: solid white 1px;
+}
+
+.hamburger-menu-item-wrapper:last-child:hover {
+  background-color: #EE5465;
+  border-top: solid white 1px;
+}
+
+.log-in-button:hover {
+  background-color: green !important;
+}
+
+.log-in-button > img {
+  height: 70% !important;
+}
+
+.log-out-button > img {
+  margin-left: 10px;
+}
+
+.hamburger-menu-item-wrapper > img {
+  margin-right: 10px;
+  height: 90%;
 }
 
 .info {
@@ -318,8 +359,7 @@ main {
 .close-icon {
   height: 30px;
   position: absolute;
-  top: 15px;
-  right: 15px;
+  right: 10px;
   cursor: pointer;
 }
 
