Updated info wording and login hover colour

--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -285,7 +285,7 @@ main {
 }
 
 .log-in-button:hover {
-  background-color: green !important;
+  background-color: #57af55 !important;
 }
 
 .log-in-button > img {
