--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -409,6 +409,8 @@ main {
   overflow-y: auto;
   outline: solid rgb(175, 175, 175) 3px;
   background-color: #3d434f;
+  color: white;
+  font-size: 14pt;
 }
 
 .show-upload-form-modal {
@@ -425,4 +427,28 @@ main {
 
 .upload-form-modal-title {
   text-decoration: underline;
+}
+
+.upload-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 500px;
+}
+
+.form-field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.upload-form-image {
+  width: 300px;
+}
+
+.cloudinary-upload {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
