--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -187,11 +187,11 @@ main {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #3d434f;
+  background: #7c9ee1;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #282c34;
+  background: #3e5178;
 }
 
 .profile {
@@ -543,4 +543,22 @@ main {
   /* width: 450px; */
   resize: none;
   font-size: 11pt;
+}
+
+.loading {
+  border: 10px solid #ffffff; 
+  border-top: 10px solid #7c9ee1;
+  border-radius: 50%;
+  width: 10vw;
+  height: 10vw;
+  animation: spin 2s linear infinite;
+  z-index: 4;
+  position: fixed;
+  top: calc(50% - 5vw);
+  left: calc(50% - 5vw);
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
