--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -71,28 +71,46 @@ main {
   outline: solid rgb(175, 175, 175) 1px;
 }
 
-.starBar {
+.starBarStarred {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
   position: absolute;
-  top: 1%;
-  right: 1%;
+  top: 5px;
+  right: 5px;
   background-color: darkblue;
-  opacity: 0.8;
-  width: 70px;
+  /* opacity: 0.8; */
+  min-width: 30px;
   color: white;
-  font-size: 10px;
   border-radius: 5px;
   height: 20px;
-  border: white solid 2px;
+  border: #FAC100 solid 2px;
+  padding: 0px 3px;
+}
+
+.starBarNotStarred {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background-color: darkblue;
+  /* opacity: 0.8; */
+  min-width: 30px;
+  color: white;
+  border-radius: 5px;
+  height: 20px;
+  border: #C7C7C7 solid 2px;
+  padding: 0px 3px;
 }
 
 .starButtonStarred {
+  /* margin-left: 1px; */
   width: 15px; 
   height: 15px;
-  font-size: 10px;
   cursor: pointer;
   border: none;
   background: url(../Gallery/GalleryImage/star_icon_gold.svg) no-repeat;
@@ -101,15 +119,14 @@ main {
 .starButtonNotStarred {
   width: 15px; 
   height: 15px;
-  font-size: 10px;
   cursor: pointer;
   border: none;
   background: url(../Gallery/GalleryImage/star_icon_grey.svg) no-repeat;
 }
 
-.starBar > p {
-  width: 60%;
+.starBarStarred, .starBarNotStarred > p {
   font-size: 10px;
+  /* margin-right: 3px; */
 }
 
 .zoomIn {
