Added smooth scrolling to top of page when clicking The Wall in navbar

--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -327,6 +327,10 @@ main {
   font-size: 13pt;
 }
 
+.info > span {
+  cursor: pointer;
+}
+
 .github-icon {
   cursor: pointer;
   margin-right: 10px;
