--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -327,13 +327,20 @@ main {
   height: 70% !important;
 }
 
-.log-out-button > img {
-  margin-left: 10px;
-}
-
 .hamburger-menu-item-wrapper > img {
   margin-right: 10px;
   height: 90%;
+}
+
+.log-out-button > img {
+  margin-left: 7px;
+  margin-right: 3px;
+}
+
+.load-button > img {
+  height: 35px;
+  margin-right: 18px;
+  margin-left: 3px;
 }
 
 .info {
