--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -332,6 +332,11 @@ main {
   height: 90%;
 }
 
+.log-in-button > img {
+  margin-left: 7px;
+  margin-right: 13px;
+}
+
 .log-out-button > img {
   margin-left: 7px;
   margin-right: 3px;
@@ -339,7 +344,7 @@ main {
 
 .load-button > img {
   height: 35px;
-  margin-right: 18px;
+  margin-right: 17px;
   margin-left: 3px;
 }
 
