--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -334,18 +334,44 @@ main {
 
 .log-in-button > img {
   margin-left: 7px;
-  margin-right: 13px;
+  margin-right: 18px;
 }
 
 .log-out-button > img {
-  margin-left: 7px;
+  margin-left: 12px;
   margin-right: 3px;
+}
+
+.star-button > img {
+  margin-left: 2px;
+  margin-right: 13px;
 }
 
 .load-button > img {
   height: 35px;
-  margin-right: 17px;
-  margin-left: 3px;
+  margin-right: 18px;
+  margin-left: 7px;
+}
+
+.github-button > img {
+  height: 38px;
+  margin-left: 6px;
+  margin-right: 16px;
+}
+
+.info-button > img {
+  height: 40px;
+  margin-left: 5px;
+  margin-right: 15px;
+}
+
+.submit-button > img {
+  margin-left: 5px;
+}
+
+.manage-button > img {
+  margin-left: 1px;
+  margin-right: 14px;
 }
 
 .info {
