Centred modal image vertically

--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -196,6 +196,10 @@ main {
 .image-modal-image {
   max-width: 100%;
   max-height: 100%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
   outline: solid rgb(175, 175, 175) 3px;
   object-fit: contain;
   cursor: zoom-out;
