--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -420,7 +420,7 @@ main {
   top: 41px;
   right: 0px;
   width: 600px;
-  height: 450px;
+  min-height: 450px;
   background-color: #3d434f;
   color: white;
   border-left: solid white 1px;
