--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -352,7 +352,7 @@ main {
   margin-right: 13px;
 }
 
-.load-button > img {
+.gallery-button > img {
   height: 35px;
   margin-right: 18px;
   margin-left: 7px;
@@ -375,8 +375,9 @@ main {
 }
 
 .manage-button > img {
-  margin-left: 1px;
-  margin-right: 14px;
+  height: 40px;
+  margin-left: 5px;
+  margin-right: 15px;
 }
 
 .info {
