Added a 'you have no posts' message for Favourites and Posts

--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -649,6 +649,12 @@ main {
   padding: 5px;
 }
 
+.no-results {
+  color: white;
+  font-size: 14pt;
+  margin-top: 20px;
+}
+
 .loading {
   border: 10px solid #ffffff; 
   border-top: 10px solid #7c9ee1;
