--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -681,35 +681,26 @@ main {
   text-decoration: inherit;
 }
 
-.edit-button{
-  margin-top: 20px;
-  width: 150px;
-  height: 40px;
+.posted-image-buttons > button {
+  height: 35px;
+  padding: 0px 5px;
   border-radius: 5px;
-  font-size: 14pt;
+  font-size: 12pt;
   cursor: pointer;  
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  border: none;
-  background-color: white;
   position: absolute;
-  top: 20px;
-  right: 10px;
+  right: 5px;
+  border: solid 2px #3d434f;
+  color: #ffffff;
 }
 
-.edit-button > span {
-  margin-left: 5px;
-  color: #3d434f;
-}
-
-.edit-button:hover {
+.edit-button{
   background-color: #7c9ee1;
+  bottom: 45px;
 }
 
-.edit-button:hover > span {
-  color: white;
+.delete-button{
+  background-color: #EE5465;
+  bottom: 5px;
 }
 
 @keyframes spin {
