--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -707,12 +707,67 @@ main {
 
 .edit-button{
   background-color: #7c9ee1;
-  bottom: 45px;
+  bottom: 152px;
 }
 
 .delete-button{
   background-color: #EE5465;
+  bottom: 112px;
+}
+
+.toggle-alt-text {
+  padding: 3px 5px;
+  font-size: 10pt;
+  cursor: pointer;  
+  position: absolute;
+  z-index: 2;
+  right: 5px;
   bottom: 5px;
+  min-width: 30px;
+  border-radius: 5px;
+  background-color: #282c34;
+  color: white;
+  border: #C7C7C7 solid 2px;
+}
+
+.alt-text-modal{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.show-alt-text-modal {
+  visibility: visible;
+}
+
+.hide-alt-text-modal {
+  visibility: hidden;
+}
+
+.alt-text-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  width: 80%;
+}
+
+.alt-text {
+  background-color: #C7C7C7;
+  width: 100%;
+  height: auto;
+  color: #282c34;
+  border-radius: 5px;
+  padding: 3px;
 }
 
 @keyframes spin {
