--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -250,7 +250,7 @@ main {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  width: 136px;
+  width: 101px;
   height: 100%;
 }
 
@@ -801,13 +801,21 @@ main {
   100% { transform: translate(0px, 0px) }
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 1024px) {
+  .theme {
+    font-size: 14pt;
+  }
+} 
+
+@media screen and (max-width: 880px) {
   .hamburger-icon-wrapper {
     width: 30px;
   }
+} 
 
+@media screen and (max-width: 790px) {
   .theme {
-    font-size: 14pt;
+    font-size: 11pt;
   }
 } 
 
@@ -821,7 +829,7 @@ main {
   .github-icon {
     display: none;
   }
-
+  
   .info-icon {
     display: none;
   }
@@ -882,6 +890,12 @@ main {
 
   #close-delete-modal {
     bottom: 14px;
+  }
+} 
+
+@media screen and (max-width: 320px) {
+  .next-theme {
+    display: none;
   }
 } 
 
