--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -841,6 +841,10 @@ main {
   .info {
     width: 32px; 
   }
+
+  .next-theme {
+    margin-left: 5px;
+  }
 } 
 
 @media screen and (max-width: 500px) {
